objects/ViewingRequest__c/ViewingRequest__c.object-meta.xml
<CustomObject>
    <description>パートナー（仲介業者）が作成するトランザクションデータです。
誰が、いつ、どの部屋を見たいか。</description>
    <label>内見予約</label>
    <nameField>
        <displayFormat>VR-{00000000}</displayFormat>
        <label>予約番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>