objects/ViewingRequest__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>仲介担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>内見予約</relationshipLabel>
    <relationshipName>ViewingRequests</relationshipName>
    <type>Lookup</type>
</CustomField>