objects/ViewingRequest__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>顧客氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>