objects/ViewingRequest__c/fields/PreferredTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredTime__c</fullName>
    <label>希望日時</label>
    <type>DateTime</type>
</CustomField>