objects/ViewingRequest__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>備考・要望など</label>
    <type>TextArea</type>
</CustomField>