objects/ViewingRequest__c/fields/TargetListing__c.field-meta.xml
<CustomField>
    <fullName>TargetListing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対象住戸</label>
    <referenceTo>Listing__c</referenceTo>
    <relationshipLabel>内見予約</relationshipLabel>
    <relationshipName>ViewingRequests</relationshipName>
    <type>Lookup</type>
</CustomField>