objects/ViewingRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Name__c</columns>
    <columns>PreferredTime__c</columns>
    <columns>BuildingName__c</columns>
    <columns>TargetListing__c</columns>
    <columns>Agent__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>